# Earthbound

./: .gitignore  CMakeLists.txt  README.md
include/astro/: erfa_export.h  frames.hpp  gravity.hpp  orbitalMechanics.hpp
include/astro/erfa/: erfa.h  erfa_export.h
include/config/: simpleSat.hpp
include/constants/: constants.hpp
include/dynamics/: eom.hpp
include/gnc/control/: attitudeController.hpp  translationalController.hpp
include/gnc/guidance/: hohmann.hpp
include/machine/states/: maneuver.hpp  safe.hpp  state.hpp
include/machine/transitions/: condition.hpp  transition.hpp
include/numerics/: quaternion.hpp  rk4.hpp
include/optimize/: leastSquares.hpp
include/spacecraft/: simpleSat.hpp
include/utilities/: csvWriter.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  attitudeController_test.cpp  eom_test.cpp  frames_test.cpp  gravity_test.cpp  orbital_mechanics_test.cpp  simple_sat_test.cpp  spacecraft_test.cpp  test_main.cpp
viz/: plotMissionDashboard.py
